- Send back saved cookies that came from ip-address based hosts. - Added a test case to exercise given secnairo above.

BUG: 134753

svn path=/trunk/KDE/kdelibs/; revision=707427